<resources>
    <string name="language">en</string>
    <string name="app_name">YAAA</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_alarm_list">YAAA alarms</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_alarm_detail">Alarm details</string>
    <string name="title_activity_about">About YAAA</string>
    <string name="every_day">every day</string>
    <string name="never">never</string>
    <string name="day_concat">", "</string>
    <string name="today">today</string>
    <string name="was_today">was today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="was_yesterday">was yesterday</string>
    <string name="next_ring_message">Next: %s</string>
    <string name="next_ring_vacation_message">Planned on %s but disabled for vacation</string>
    <string name="passed_date">last %s</string>
    <string name="fmt_weekday_time">EEEE \'at\' %s</string>
    <string name="fmt_weekday_day_time">EEEE, d \'at\' %s</string>
    <string name="fmt_weekday_day_month_time">EEEE, MMMM d \'at\' %s</string>
    <string name="fmt_weekday_day_month_year_time">EEEE, MMMM d \'of\' yyyy \'at\' %s</string>
    <string name="fmt_weekday">EEEE</string>
    <string name="fmt_weekday_day">EEEE, d</string>
    <string name="fmt_weekday_day_month">EEEE, MMMM d</string>
    <string name="fmt_weekday_day_month_year">EEEE, MMMM d \'of\' yyyy</string>
    <string name="text_time">\'%1$s at\' %2$s</string>
    <string name="day_and">and</string>
    <string name="day_to">to</string>
    <string name="only_date">only on %s</string>
    <string name="daily_from">daily from %s</string>
    <string name="monthly_from">monthly from %s</string>
    <string name="annual_from">annual from %s</string>
    <string name="hoursminutes">every %s</string>
    <string name="timeinterval_sep_double">%1$s and %2$s</string>
    <string name="timeinterval_sep_triple">%1$s, %2$s and %3$s</string>
    <string name="timeinterval_sep_quadruple">%1$s, %2$s, %3$s and %4$s</string>
    <string name="timeinterval_double" translatable="false">%1$s %2$s</string>
    <string name="timeinterval_triple" translatable="false">$1$s %2$s %3$s</string>
    <string name="timeinterval_quadruple" translatable="false">$1$s %2$s %3$s %4$s</string>
    <string name="dismiss_alarm">"Dismiss alarm"</string>
    <string name="wake_times_in">and %1$s in %2$s</string>
    <string name="wake_retries">retries</string>
    <string name="press_plus_to_add_alarm">Press the button to add an alarm</string>
    <string name="swipe_to_delete">Swipe left or right to delete an alarm</string>
    <string name="hint_title">Untitled</string>
    <string name="title">Title</string>
    <string name="default_title">Untitled</string>
    <string name="hint_time">alarm time</string>
    <string name="time">Time</string>
    <string name="hint_repetition">alarm repetition</string>
    <string-array name="repetition">
        <item>None</item>
        <item>Week days</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Annual</item>
        <item>Interval</item>
    </string-array>
    <string name="select_repetition">Repetition mode</string>
    <string name="interval">Interval</string>
    <string name="interval_days">Days</string>
    <string name="interval_hours">Hours</string>
    <string name="interval_minutes">Minutes</string>
    <string name="interval_seconds">Seconds</string>
    <string name="hint_date">date</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="hint_sound_type">sound</string>
    <string-array name="sound_type">
        <item>Settings</item>
        <item>None</item>
        <item>Ringtone</item>
        <item>Notification</item>
        <item>Alarm</item>
        <item>Song</item>
        <item>Artist / Album (folder)</item>
    </string-array>
    <string-array name="sound_type_prefs">
        <item>None</item>
        <item>Ringtone</item>
        <item>Notification</item>
        <item>Alarm</item>
        <item>Song</item>
        <item>Artist / Album (folder)</item>
    </string-array>
    <string name="sound_type_none">None</string>
    <string name="select_sound_type">Choose a sound type</string>
    <string name="select_sound">Choose a sound</string>
    <string name="select_ringtone">Choose a ringtone</string>
    <string name="select_notification">Choose a notification</string>
    <string name="select_alarm">Choose an alarm</string>
    <string name="select_folder">Choose a folder</string>
    <string name="select_song">Choose a song</string>
    <string name="hint_sound_source">sound source</string>
    <string name="song_not_found">%s not found</string>
    <string name="songs_not_found">%s has no songs</string>
    <string name="folder_go_up">...</string>
    <string name="path">Path</string>
    <string name="volume">Volume</string>
    <string name="hint_volume">volume</string>
    <string name="vibrate">Vibrate</string>
    <string name="hint_vibrate">vibrate</string>
    <string name="volume_default">Settings</string>
    <string name="volume_disabled">Mute</string>
    <string name="gradual_interval">Gradual\nvolume</string>
    <string name="hint_gradual_interval">gradual volume</string>
    <plurals name="interval_second">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="interval_second_redux">%d s</string>
    <string name="gradual_volume">Gradual volume</string>
    <string name="wake_verification">Wake up\nverification</string>
    <string name="hint_wake_retries">retries</string>
    <string name="wake_interval">interval</string>
    <string name="hint_wake_interval">interval</string>
    <string name="wake_verification_retries">Retries</string>
    <string name="wake_verification_interval">Interval</string>
    <string name="wake_verification_dialog">Wake up verification</string>
    <string name="wake_retries_in">%1$s in %2$s</string>
    <string name="autodelete_alarm">Delete alarm automatically</string>
    <string name="hint_autodelete_alarm">auto-delete alarm</string>
    <string name="autodelete_alarm_done">When done</string>
    <string name="hint_autodelete_alarm_done">when done</string>
    <string name="autodelete_alarm_after">After</string>
    <string name="hint_autodelete_alarm_after">after</string>
    <string name="hint_autodelete_alarm_after_date">after date</string>
    <string name="autodelete_has_effect">Alarm is repetitive, so this option has no effect.</string>
    <string name="ignore_vacation_period">Ignore vacation periods</string>
    <string name="hint_ignore_vacation_period">ignore vacation period</string>
    <string name="see_settings">See Settings</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_choose">Choose</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="vacation_period">Vacation period from now to date</string>
    <string name="hint_vacation_period">vacation period from now to date</string>
    <string name="hint_vacation_period_date">Vacation end date</string>
    <string name="no_final_date_defined">Choose date</string>
    <string name="vacation_period_exp">Disable alarms until this date,
        except for alarms with <b>Ignore vacation periods</b>.
    </string>
    <string name="vacation_period_dialog">Vacation end date</string>
    <string name="notification_interval">Notification\ninterval</string>
    <string name="hint_notification_interval">notification interval</string>
    <string name="notification_interval_exp">A notification will appear before an alarm rings,
        where you can dismiss that repetition.
    </string>
    <string name="notification_interval_dialog">Notification interval</string>
    <string name="snooze_interval">Snooze\ninterval</string>
    <string name="hint_snooze_interval">snooze interval</string>
    <string name="snooze_interval_dialog">Snooze interval</string>
    <string name="alarm_defaults">Alarm settings</string>
    <string name="default_value">Settings</string>
    <string name="disabled_value">Disabled</string>
    <plurals name="interval_minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="by_nulleye">by
        <b>nulleye</b>
    </string>
    <string name="web_nulleye">
        <a href="http://www.nulleye.com">www.nulleye.com</a>
    </string>
    <string name="web_github">
        <a href="http://github.com/Nulleye">Github</a>
    </string>
    <string name="web_linkedin">
        <a href="http://www.linkedin.com/in/cristianalvarezplanas">linkedIn</a>
    </string>
    <string name="udacity_text">A <b>Pro</b> version of this app is on the works and will include:
    </string>
    <string name="pro_text1">A specific <b>Tablet layout</b> design.
    </string>
    <string name="pro_text2">Multiple <b>Alarm screens</b> or alarm dismiss modes, such as \'<b>
        Phone shake
    </b> to Snooze - <b>Random
        button position
    </b> to Stop\', or \'<b>Conscious mode</b> - solve a problem to Stop\'.
    </string>
    <string name="pro_text3">Multiple online sound streaming sources, such as <b>Spotify</b>, online <b>
        Radios</b>, <b>Google Play Music</b>, etc.
    </string>
    <string name="thanks_to">This app could not have been possible without the inestimable
        contribution of these <b>Open Source</b> world philanthropists:
    </string>
    <string name="contrib1">
        <b>Aidan Follestad</b>
        for his Material Dialogs
        <a href="http://github.com/afollestad/material-dialogs">
            github.com/afollestad/material-dialogs
        </a>
    </string>
    <string name="contrib2">
        <b>Ander Webbs</b>
        for his fast Material DiscreteSeekBar
        <a href="http://github.com/AnderWeb/discreteSeekBar">github.com/AnderWeb/discreteSeekBar</a>
    </string>
    <string name="contrib3">
        <b>Kasual Business</b>
        for its Material NumberPicker dialog
        <a href="http://github.com/KasualBusiness/MaterialNumberPicker">
            github.com/KasualBusiness/MaterialNumberPicker
        </a>
    </string>
    <string name="contrib4">And the <b>Android Open Source Project</b> for everything else
        <a href="http://source.android.com/">source.android.com</a>
    </string>
    <string name="cd_alarm_next_planned_ring">Next planned alarm ring</string>
    <string name="cd_click_to_choose_alarm_time">Click to choose the alarm time</string>
    <string name="cd_click_to_switch_alarm_onoff">Click to enable or disable the alarm</string>
    <string name="cd_alarm_repetition">Alarm repetition</string>
    <string name="cd_select_alarm_repetition_type">Select alarm repetition type: daily, week days,
        monthly, etc
    </string>
    <string name="cd_alarm_date">Alarm date</string>
    <string name="cd_select_alarm_date">Click to select alarm date</string>
    <string name="cd_auto_delete_alarm">Auto delete alarm</string>
    <string name="cd_autodelete_when_done">Auto delete alarm when done</string>
    <string name="cd_autodelete_for_none">Auto delete when done warning, only for non repetitive
        alarms
    </string>
    <string name="cd_autodelete_after_date">Auto delete after a date</string>
    <string name="cd_click_to_choose_autodelete_after_date">Click to choose auto delete after date
    </string>
    <string name="cd_alarm_ignores_vacation">Alarm ignores vacation periods</string>
    <string name="cd_nulleye_logo">Nulleye logo</string>
    <string name="cd_more4less">More for less…</string>
</resources>