<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.nulleye.yaaa.activities.AlarmDetailFragment"
             android:padding="@dimen/form_pad"
             android:id="@+id/alarm_detail"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tablet_time_onoff"
        android:layout_marginBottom="@dimen/line_sep">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/time_text_size"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_click_to_choose_alarm_time"
                android:focusable="true"
                />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onoff"
                android:layout_gravity="center_vertical|end"
                android:switchMinWidth="@dimen/onoff_size"
                android:contentDescription="@string/cd_click_to_switch_alarm_onoff"
                android:focusable="true"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearance"
            android:id="@+id/next_ring"
            android:contentDescription="@string/cd_alarm_next_planned_ring"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/line_sep"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:labelFor="@id/title"
            />
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/hint_title"
            android:focusable="true"
            />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/line_2sep"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/field_sep"
            android:layout_marginEnd="@dimen/field_sep"
            android:layout_gravity="end|center_vertical"
            android:layout_column="0"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetition"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/field_sep2"
                android:layout_marginEnd="@dimen/field_sep2"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_update"
                android:tint="@color/tertiary_text_dark"
                android:contentDescription="@string/cd_alarm_repetition"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_column="1"
            android:layout_weight="1"
            >
            <Spinner
                android:layout_weight="1"
                android:id="@+id/repetition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@string/cd_select_alarm_repetition_type"
                android:focusable="true"
                />
        </LinearLayout>
    </TableRow>

    <include layout="@layout/week_days"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/line_2sep"
        android:id="@+id/choose_date"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/field_sep"
            android:layout_marginEnd="@dimen/field_sep"
            android:layout_gravity="end|center_vertical"
            android:layout_column="0"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/field_sep2"
                android:layout_marginEnd="@dimen/field_sep2"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_event"
                android:tint="@color/tertiary_text_dark"
                android:contentDescription="@string/cd_alarm_date"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_column="1"
            android:layout_weight="1"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_gravity="start|center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_select_alarm_date"
                android:focusable="true"
                />
        </LinearLayout>
    </TableRow>


    <include layout="@layout/alarm_options"/>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginTop="@dimen/line_sep"
        >
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autodelete_alarm"
            android:textAppearance="?android:attr/textAppearance"
            android:id="@+id/autodelete_alarm"
            android:layout_span="2"
            android:layout_weight="1"
            android:contentDescription="@string/cd_auto_delete_alarm"
            android:focusable="true"
            />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autodelete_alarm_block"
        android:layout_gravity="start"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_column="1"
            android:layout_weight="1"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                >
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/autodelete_alarm_done"
                    android:textAppearance="?android:attr/textAppearance"
                    android:id="@+id/autodelete_alarm_done"
                    android:contentDescription="@string/cd_autodelete_when_done"
                    android:focusable="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="@color/error"
                    android:id="@+id/autodelete_message"
                    android:text="@string/autodelete_has_effect"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/field_sep"
                    android:layout_marginStart="@dimen/field_sep"
                    android:layout_marginBottom="@dimen/line_sep2"
                    android:contentDescription="@string/cd_autodelete_for_none"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autodelete_alarm_after"
                    android:textAppearance="?android:attr/textAppearance"
                    android:id="@+id/autodelete_alarm_after"
                    android:layout_marginRight="@dimen/field_sep"
                    android:layout_marginEnd="@dimen/field_sep"
                    android:contentDescription="@string/cd_autodelete_after_date"
                    android:focusable="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/autodelete_alarm_after_date"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cd_click_to_choose_autodelete_after_date"
                    android:focusable="true"
                    />

            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_sep"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_span="2"
            android:layout_weight="1"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ignore_vacation_period"
                android:textAppearance="?android:attr/textAppearance"
                android:id="@+id/ignore_vacation"
                android:layout_marginRight="@dimen/field_sep2"
                android:layout_marginEnd="@dimen/field_sep2"
                android:contentDescription="@string/cd_alarm_ignores_vacation"
                android:focusable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_settings"
                />
        </LinearLayout>
    </TableRow>


</TableLayout>
